@@ -7,19 +7,19 @@ import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import br.com.oficina.veiculo.application.query.ListarVeiculosQuery;
+import br.com.oficina.support.persistence.TestVeiculoRepository;
+import br.com.oficina.veiculo.application.query.ConsultarVeiculosQuery;
 import br.com.oficina.veiculo.domain.model.TipoCombustivel;
 import br.com.oficina.veiculo.domain.model.Veiculo;
-import br.com.oficina.support.persistence.TestVeiculoRepository;
 
-class ListarVeiculosServiceTest {
+class ConsultarVeiculosServiceTest {
     private TestVeiculoRepository repository;
-    private ListarVeiculosService service;
+    private ConsultarVeiculosService service;
 
     @BeforeEach
     void setUp() {
         repository = new TestVeiculoRepository();
-        service = new ListarVeiculosService(repository);
+        service = new ConsultarVeiculosService(repository);
         repository.salvar(new Veiculo(
                 "ABC1D23",
                 "Toyota",
@@ -50,15 +50,17 @@ class ListarVeiculosServiceTest {
     }
 
     @Test
-    void deveListarTodosQuandoNaoHaFiltros() {
-        List<Veiculo> veiculos = service.listarVeiculos(new ListarVeiculosQuery(null, null, null, null, null, null));
+    void deveConsultarTodosQuandoNaoHaFiltros() {
+        List<Veiculo> veiculos = service.consultarVeiculos(
+                new ConsultarVeiculosQuery(null, null, null, null, null, null, null));
 
         assertEquals(3, veiculos.size());
     }
 
     @Test
-    void deveFiltrarPorAnoMarcaFabricantePotenciaCambioETipo() {
-        List<Veiculo> veiculos = service.listarVeiculos(new ListarVeiculosQuery(
+    void deveConsultarPorPlacaMarcaFabricanteAnoPotenciaCambioETipo() {
+        List<Veiculo> veiculos = service.consultarVeiculos(new ConsultarVeiculosQuery(
+                "ABC1D23",
                 2024,
                 "Toyota",
                 "Toyota Motor Corporation",
@@ -67,12 +69,30 @@ class ListarVeiculosServiceTest {
                 TipoCombustivel.FLEX));
 
         assertEquals(1, veiculos.size());
-        assertEquals("ABC1D23", veiculos.get(0).getPlaca());
+        assertEquals("ABC1D23", veiculos.getFirst().getPlaca());
     }
 
     @Test
-    void deveRetornarVazioQuandoNenhumVeiculoAtendeFiltro() {
-        List<Veiculo> veiculos = service.listarVeiculos(new ListarVeiculosQuery(
+    void deveConsultarPorPlacaOuMarcaOuFabricante() {
+        List<Veiculo> porPlaca = service.consultarVeiculos(
+                new ConsultarVeiculosQuery("TES1A23", null, null, null, null, null, null));
+        List<Veiculo> porMarca = service.consultarVeiculos(
+                new ConsultarVeiculosQuery(null, null, "Tesla", null, null, null, null));
+        List<Veiculo> porFabricante = service.consultarVeiculos(
+                new ConsultarVeiculosQuery(null, null, null, "Ford Motor Company", null, null, null));
+
+        assertEquals(1, porPlaca.size());
+        assertEquals("TES1A23", porPlaca.getFirst().getPlaca());
+        assertEquals(1, porMarca.size());
+        assertEquals("TES1A23", porMarca.getFirst().getPlaca());
+        assertEquals(1, porFabricante.size());
+        assertEquals("FOR1D23", porFabricante.getFirst().getPlaca());
+    }
+
+    @Test
+    void deveRetornarVazioQuandoNenhumVeiculoAtendeConsulta() {
+        List<Veiculo> veiculos = service.consultarVeiculos(new ConsultarVeiculosQuery(
+                "ZZZ9Z99",
                 2020,
                 "Honda",
                 null,
